# FPFH_LAAS_Gepetto

generator/: CMakeLists.txt
generator/include/: mfpfh.h
generator/src/: main.cpp  mfpfh.cpp
localizer/: CMakeLists.txt
localizer/include/: gmm.h  gmm1.h  localizer.h  objectsegmentationplane.h
localizer/include/impl/: localizer_tmpl.hpp
localizer/src/: for_test.cpp  fpfhtest.cpp  gmm.cpp  gmm1.cpp  localizer_base.cpp  localizer_load.cpp  localizer_run_clusters.cpp  localizer_run_kmeans.cpp  localizer_run_surprise.cpp  main.cpp  objectsegmentationplane.cpp
python/: analyse.py  check_flexion.py  diff_histo.py  faio.py  junk.py  mac_gmm.py  mcnd.py  namechecker.py  test_kmeans.py
ros/: CMakeLists.txt  package.xml
ros/include/: extractor.h
ros/include/impl/: extractor_tmpl.hpp
ros/launch/: simulation.launch
ros/meshes/: note.md
ros/models/bauzil_room/: model.config  model.sdf
ros/models/bauzil_room/meshes/: bauzil_room_no_floor.stl
ros/src/: extractor.cpp  main.cpp
ros/urdf/: object_model.urdf  sensor_alone.urdf.xacro
ros/worlds/: bauzil.world  empty.world
