<?xml version="1.0"?>
<package format="2">
  <name>mfpfh_gazebo</name>
  <version>0.0.0</version>
  <description>
    Package for the generation of viewpoints for Multiscale FPFH creation.
  </description>

  <license>TODO</license>

  <author email="tlasguigne@laas.fr">Thibaud Lasguignes</author>
  <maintainer email="tlasguigne@laas.fr">Thibaud Lasguignes</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  
</package>